--- a/unibot_project/templates/admin/base_site.html
+++ b/unibot_project/templates/admin/base_site.html
@@ -5,18 +5,14 @@
 
 {% block extrastyle %}
   {{ block.super }}
-  <!-- خطوط اختيارية -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-  <!-- ستايل مخصص للأدمن -->
-  <link rel="stylesheet" href="{% static 'admin/custom.css' %}">
+  <link rel="stylesheet" href="{% static 'unibot_admin/custom.css' %}">
 {% endblock %}
 
 {% block branding %}
-  <h1 id="site-name">
-    <a href="{% url 'admin:index' %}">لوحة إدارة UniBot</a>
-  </h1>
+  <h1 id="site-name"><a href="{% url 'admin:index' %}">لوحة إدارة UniBot</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
