--- a/unibot_project/templates/admin/base_site.html
+++ b/unibot_project/templates/admin/base_site.html
@@ -1,25 +1,34 @@
+{% load static i18n %}
 {% extends "admin/base.html" %}
-{% load static %}
 
-{% block title %}
-    {% if subtitle %}
-        {{ subtitle }} | {{ site_title|default:_('لوحة إدارة UniBot') }}
-    {% else %}
-        {{ site_title|default:_('لوحة إدارة UniBot') }}
-    {% endif %}
+{% block title %}لوحة إدارة UniBot{% endblock %}
+
+{% block extrastyle %}
+  {{ block.super }}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'unibot_admin/custom.css' %}">
 {% endblock %}
 
 {% block branding %}
-<h1 id="site-name">
-    <a href="{% url 'admin:index' %}">
-         لوحة إدارة UniBot
-    </a>
-</h1>
+  <div class="ua-topbar">
+    <div class="ua-topbar__brand">
+      <span class="ua-logo">🤖</span>
+      <span class="ua-title">UniBot Admin</span>
+    </div>
+    <div class="ua-topbar__meta">
+      <a href="{% url 'admin:index' %}" class="ua-link">{% trans 'الرئيسية' %}</a>
+      <span class="ua-dot">•</span>
+      <a href="/" class="ua-link" target="_blank">{% trans 'عرض الموقع' %}</a>
+      <span class="ua-dot">•</span>
+      <a href="{% url 'admin:password_change' %}" class="ua-link">{% trans 'تغيير كلمة المرور' %}</a>
+      <span class="ua-dot">•</span>
+      <a href="{% url 'admin:logout' %}" class="ua-link">{% trans 'تسجيل الخروج' %}</a>
+    </div>
+  </div>
 {% endblock %}
 
-{% block extrastyle %}
-    {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{% static 'unibot_admin/custom.css' %}">
+{% block nav-sidebar %}
+  {% include "admin/nav_sidebar.html" %}
 {% endblock %}
-
-{% block nav-global %}{% endblock %}
