--- a/unibot_project/custom_admin/templates/custom_admin/faqs_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/faqs_list.html
@@ -1,32 +1,23 @@
 {% extends "custom_admin/generic_list.html" %}
-{% block title %}الأسئلة الشائعة{% endblock %}
-{% block subtitle %}عرض الأسئلة مع الفئات وتاريخ التحديث{% endblock %}
 
-{% block toolbar %}
-<form method="get" class="toolbar">
-  <input class="input" type="text" name="q" value="{{ q }}" placeholder="ابحث في السؤال/الإجابة…" />
-  <button class="btn">بحث</button>
-</form>
-{% endblock %}
+{% block list_title %}الأسئلة الشائعة{% endblock %}
 
-{% block table_head %}
-<tr>
+{% block list_headers %}
   <th>السؤال</th>
   <th>الفئة</th>
+  <th>محدّث بواسطة</th>
   <th>آخر تحديث</th>
-  <th>حدّث بواسطة</th>
-</tr>
 {% endblock %}
 
-{% block table_rows %}
-{% for f in items %}
-<tr>
-  <td>{{ f.question|truncatechars:60 }}</td>
-  <td>{{ f.category.name }}</td>
-  <td>{{ f.updated_at|date:"Y-m-d H:i" }}</td>
-  <td>{% if f.updated_by %}{{ f.updated_by.email }}{% else %}-{% endif %}</td>
-</tr>
-{% empty %}
-<tr><td colspan="4">لا توجد بيانات</td></tr>
-{% endfor %}
+{% block list_rows %}
+  {% for f in items %}
+    <tr>
+      <td>{{ f.question|truncatechars:60 }}</td>
+      <td>{{ f.category.name }}</td>
+      <td>{{ f.updated_by.email|default:"-" }}</td>
+      <td>{{ f.updated_at|date:"Y-m-d H:i" }}</td>
+    </tr>
+  {% empty %}
+    <tr><td colspan="4">لا توجد أسئلة</td></tr>
+  {% endfor %}
 {% endblock %}
