--- a/unibot_project/custom_admin/templates/custom_admin/favorites_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/favorites_list.html
@@ -1,23 +1,21 @@
 {% extends "custom_admin/generic_list.html" %}
-{% block title %}المفضلات{% endblock %}
-{% block subtitle %}السؤال المفضّل لكل مستخدم{% endblock %}
 
-{% block table_head %}
-<tr>
+{% block list_title %}المفضلات{% endblock %}
+
+{% block list_headers %}
   <th>المستخدم</th>
   <th>السؤال</th>
-  <th>تاريخ الإضافة</th>
-</tr>
+  <th>أُضيفت في</th>
 {% endblock %}
 
-{% block table_rows %}
-{% for r in items %}
-<tr>
-  <td>{{ r.user.email }}</td>
-  <td>{{ r.faq.question|truncatechars:60 }}</td>
-  <td>{{ r.created_at|date:"Y-m-d H:i" }}</td>
-</tr>
-{% empty %}
-<tr><td colspan="3">لا توجد بيانات</td></tr>
-{% endfor %}
+{% block list_rows %}
+  {% for r in items %}
+    <tr>
+      <td>{{ r.user.email }}</td>
+      <td>{{ r.faq.question|truncatechars:60 }}</td>
+      <td>{{ r.created_at|date:"Y-m-d H:i" }}</td>
+    </tr>
+  {% empty %}
+    <tr><td colspan="3">لا توجد مفضلات</td></tr>
+  {% endfor %}
 {% endblock %}
