--- a/unibot_project/custom_admin/templates/custom_admin/users_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/users_list.html
@@ -1,32 +1,23 @@
 {% extends "custom_admin/generic_list.html" %}
-{% block title %}المستخدمون{% endblock %}
-{% block subtitle %}قائمة مستخدمي النظام{% endblock %}
 
-{% block toolbar %}
-<form method="get" class="toolbar">
-  <input class="input" type="text" name="q" value="{{ q }}" placeholder="ابحث بالبريد أو الاسم…" />
-  <button class="btn">بحث</button>
-</form>
-{% endblock %}
+{% block list_title %}المستخدمون{% endblock %}
 
-{% block table_head %}
-<tr>
+{% block list_headers %}
   <th>البريد</th>
   <th>الاسم</th>
   <th>الدور</th>
-  <th>تاريخ الإنشاء</th>
-</tr>
+  <th>مسجل منذ</th>
 {% endblock %}
 
-{% block table_rows %}
-{% for u in items %}
-<tr>
-  <td>{{ u.email }}</td>
-  <td>{{ u.name|default:"-" }}</td>
-  <td>{{ u.role }}</td>
-  <td>{{ u.created_at|date:"Y-m-d H:i" }}</td>
-</tr>
-{% empty %}
-<tr><td colspan="4">لا توجد بيانات</td></tr>
-{% endfor %}
+{% block list_rows %}
+  {% for u in items %}
+    <tr>
+      <td>{{ u.email }}</td>
+      <td>{{ u.name|default:"-" }}</td>
+      <td>{{ u.role }}</td>
+      <td>{{ u.created_at|date:"Y-m-d H:i" }}</td>
+    </tr>
+  {% empty %}
+    <tr><td colspan="4">لا يوجد مستخدمون</td></tr>
+  {% endfor %}
 {% endblock %}
