--- a/unibot_project/custom_admin/templates/custom_admin/kb_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/kb_list.html
@@ -1,36 +1,27 @@
 {% extends "custom_admin/generic_list.html" %}
-{% block title %}ملفات الأساس المعرفي{% endblock %}
-{% block subtitle %}قائمة ملفات الـ Knowledge Base{% endblock %}
 
-{% block toolbar %}
-<form method="get" class="toolbar">
-  <input class="input" type="text" name="q" value="{{ q }}" placeholder="ابحث بالعنوان…" />
-  <button class="btn">بحث</button>
-</form>
-{% endblock %}
+{% block list_title %}ملفات الـ Knowledge base{% endblock %}
 
-{% block table_head %}
-<tr>
+{% block list_headers %}
   <th>العنوان</th>
-  <th>آخر تحديث</th>
   <th>الملف</th>
-</tr>
+  <th>آخر تحديث</th>
 {% endblock %}
 
-{% block table_rows %}
-{% for k in items %}
-<tr>
-  <td>{{ k.title }}</td>
-  <td>{{ k.updated_at|date:"Y-m-d H:i" }}</td>
-  <td>
-    {% if k.file %}
-      <a class="btn sm" href="{{ k.file.url }}" target="_blank">فتح</a>
-    {% else %}
-      -
-    {% endif %}
-  </td>
-</tr>
-{% empty %}
-<tr><td colspan="3">لا توجد بيانات</td></tr>
-{% endfor %}
+{% block list_rows %}
+  {% for k in items %}
+    <tr>
+      <td>{{ k.title }}</td>
+      <td>
+        {% if k.file %}
+          <a href="{{ k.file.url }}" target="_blank">تنزيل</a>
+        {% else %}
+          -
+        {% endif %}
+      </td>
+      <td>{{ k.updated_at|date:"Y-m-d H:i" }}</td>
+    </tr>
+  {% empty %}
+    <tr><td colspan="3">لا توجد ملفات</td></tr>
+  {% endfor %}
 {% endblock %}
