--- a/unibot_project/custom_admin/templates/custom_admin/faqs_list.html
+++ b/unibot_project/custom_admin/templates/custom_admin/faqs_list.html
@@ -1,23 +1,18 @@
 {% extends "custom_admin/generic_list.html" %}
-
 {% block list_title %}الأسئلة الشائعة{% endblock %}
-
 {% block list_headers %}
   <th>السؤال</th>
   <th>الفئة</th>
-  <th>محدّث بواسطة</th>
   <th>آخر تحديث</th>
 {% endblock %}
-
 {% block list_rows %}
   {% for f in items %}
     <tr>
       <td>{{ f.question|truncatechars:60 }}</td>
-      <td>{{ f.category.name }}</td>
-      <td>{{ f.updated_by.email|default:"-" }}</td>
+      <td>{{ f.category.name|default:"-" }}</td>
       <td>{{ f.updated_at|date:"Y-m-d H:i" }}</td>
     </tr>
   {% empty %}
-    <tr><td colspan="4">لا توجد أسئلة</td></tr>
+    <tr><td colspan="3">لا توجد أسئلة</td></tr>
   {% endfor %}
 {% endblock %}
